// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Cells > TableDataCell component renders  1`] = `
<body>
  <div>
    <td
      class="table-data-test-class font-normal text-sm py-3 whitespace-nowrap"
      data-testid="table-data-cell"
    />
    <!--&lt;TableDataCell&gt;-->
  </div>
</body>
`;

exports[`Table Cells > TableDataWithButton component renders  1`] = `
<body>
  <div>
    <td
      class="pb-8 pt-6 table-data-with-button-test-class font-semibold text-base py-6 whitespace-nowrap"
      data-testid="table-data-with-button"
    >
      <div
        class="flex flex-col items-center justify-start"
      >
        <div
          class="m-auto flex h-[35px] items-center"
        />
         
        <div
          class="flex h-[18px] items-center pt-[10px]"
        />
      </div>
    </td>
    <!--&lt;TableDataWithButton&gt;-->
  </div>
</body>
`;

exports[`Table Cells > TableGridDataCell component renders  1`] = `
<body>
  <div>
    <div
      class="table-grid-data-test-class font-normal text-sm py-3 whitespace-nowrap"
      data-testid="table-grid-data-cell"
    />
    <!--&lt;TableGridDataCell&gt;-->
  </div>
</body>
`;
